add vue3 weather directory

--- a/weather-vue-app/src/assets/scss/_global.scss
+++ b/weather-vue-app/src/assets/scss/_global.scss
@@ -11,7 +11,7 @@ body {
   position: relative;
   background: {
     color: #872aac;
-    image: url('http://surl.li/crczi');
+    image: url('./../images/space.jpg');
     size: cover;
     position: center;
     repeat: no-repeat;
