--- a/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
+++ b/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 html {
   height: 100%;
 }
@@ -12,19 +14,19 @@ body {
   background: {
     color: #872aac;
     image: linear-gradient(
-                    45deg,
-                    hsl(240deg 100% 20%) 0%,
-                    hsl(289deg 100% 21%) 11%,
-                    hsl(315deg 100% 27%) 22%,
-                    hsl(329deg 100% 36%) 33%,
-                    hsl(337deg 100% 43%) 45%,
-                    hsl(357deg 91% 59%) 56%,
-                    hsl(17deg 100% 59%) 67%,
-                    hsl(34deg 100% 53%) 78%,
-                    hsl(45deg 100% 50%) 89%,
-                    hsl(55deg 100% 50%) 100%
+      45deg,
+      hsl(240deg 100% 20%) 0%,
+      hsl(289deg 100% 21%) 11%,
+      hsl(315deg 100% 27%) 22%,
+      hsl(329deg 100% 36%) 33%,
+      hsl(337deg 100% 43%) 45%,
+      hsl(357deg 91% 59%) 56%,
+      hsl(17deg 100% 59%) 67%,
+      hsl(34deg 100% 53%) 78%,
+      hsl(45deg 100% 50%) 89%,
+      hsl(55deg 100% 50%) 100%
     );
-    image: url('../images/space.jpg');
+    //image: url('../images/space.jpg');
     size: cover;
     position: center;
     repeat: no-repeat;
