--- a/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_vars.scss
+++ b/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_vars.scss
@@ -1,4 +1,10 @@
 $font-size: 18px;
 
 $loader-color: #ff6700;
-$white: #FFFFFFFF
+$white: #ffffffff;
+
+@mixin wide-850 {
+  @media screen and (max-width: 850px) {
+    @content;
+  }
+}
