--- a/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
+++ b/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
@@ -9,6 +9,7 @@ body {
   font-size: $font-size;
   font-weight: 600;
   line-height: normal;
+  height: 100%;
   min-height: 100%;
   position: relative;
   background: {
@@ -33,7 +34,7 @@ body {
 }
 
 #app {
-  height: 100%;
+  height: calc(100% - 65px);
 }
 
 h1,
@@ -59,4 +60,5 @@ li {
   margin: 0 auto;
   max-width: 800px;
   padding: 0px 15px;
+  height: 100%;
 }
