--- a/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
+++ b/wetherAppVue3PiniaCompositionAPI/src/assets/scss/_global.scss
@@ -12,25 +12,25 @@ body {
   height: 100%;
   min-height: 100%;
   position: relative;
-  background: {
-    image: linear-gradient(
-      45deg,
-      hsl(240deg 100% 20%) 0%,
-      hsl(289deg 100% 21%) 11%,
-      hsl(315deg 100% 27%) 22%,
-      hsl(329deg 100% 36%) 33%,
-      hsl(337deg 100% 43%) 45%,
-      hsl(357deg 91% 59%) 56%,
-      hsl(17deg 100% 59%) 67%,
-      hsl(34deg 100% 53%) 78%,
-      hsl(45deg 100% 50%) 89%,
-      hsl(55deg 100% 50%) 100%
-    );
-    //image: url('../images/space.jpg');
-    size: 100%;
-    position: center;
-    repeat: no-repeat;
-  }
+  // background: {
+  //   image: linear-gradient(
+  //     45deg,
+  //     hsl(240deg 100% 20%) 0%,
+  //     hsl(289deg 100% 21%) 11%,
+  //     hsl(315deg 100% 27%) 22%,
+  //     hsl(329deg 100% 36%) 33%,
+  //     hsl(337deg 100% 43%) 45%,
+  //     hsl(357deg 91% 59%) 56%,
+  //     hsl(17deg 100% 59%) 67%,
+  //     hsl(34deg 100% 53%) 78%,
+  //     hsl(45deg 100% 50%) 89%,
+  //     hsl(55deg 100% 50%) 100%
+  //   );
+  background-image: linear-gradient(242deg, #d99c9d, #8677d9 51%, #6072cc);
+  //image: url('../images/space.jpg');
+  size: 100%;
+  position: center;
+  repeat: no-repeat;
 }
 
 #app {
@@ -58,7 +58,13 @@ li {
 
 .container {
   margin: 0 auto;
-  max-width: 800px;
+  max-width: 900px;
   padding: 0px 15px;
   height: 100%;
+}
+
+.center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
